# postfly-hackaton-2

./: README.md
backend/: .env  main.py  mastodon_connector.py  pyproject.toml  requirements.txt  server.py  twitter_connector.py
backend/app/: database.py  models.py  schemas.py  utils.py
backend/app/routers/: organizations.py  posts.py  social_media.py  users.py
backend/models/: organization.py  post.py  social.py  user.py
backend_v2/: db.sqlite3  pyproject.toml
backend_v2/api/: models.py  serializers.py  views.py
backend_v2/core/: settings.py  urls.py
frontend/post-sphere-connect-main/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/post-sphere-connect-main/src/: App.tsx  index.css
frontend/post-sphere-connect-main/src/pages/: Dashboard.tsx  Index.tsx  SocialConnections.tsx
frontend/post-sphere-connect-main/src/utils/: platformRules.ts
